# Hair-simulation

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Sphere.h  shader_c.h  shader_t.h
shaders/: Hair.frag  Hair.geom  Hair.tesc  Hair.tese  HairSimulation.comp
src/: Sphere.cpp
textures/: brown.tga  yellow.tga
